--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.DS_Store
+db.sqlite3
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
