--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.1
+django-postgrespool==0.3.0
 django-toolbelt==0.0.1
+django-widget-tweaks==1.3
 gunicorn==19.3.0
 psycopg2==2.4.6
-static3==0.6.0
-wsgiref==0.1.2
-django-postgrespool==0.3.0
 SQLAlchemy==1.0.4
+static3==0.6.0
 whitenoise==1.0.6
