--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ Django==1.8.1
 django-postgrespool==0.3.0
 django-toolbelt==0.0.1
 django-widget-tweaks==1.3
+djrill==1.4.0
 gunicorn==19.3.0
 psycopg2==2.4.6
+requests==2.7.0
 SQLAlchemy==1.0.4
 static3==0.6.0
 whitenoise==1.0.6
