--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djrill==1.4.0
 gunicorn==19.3.0
 mercadopago==0.3.3
 psycopg2==2.4.6
+pytz==2015.4
 requests==2.7.0
 SQLAlchemy==1.0.4
 static3==0.6.0
