--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ django-toolbelt==0.0.1
 django-transaction-hooks==0.2
 django-widget-tweaks==1.3
 djrill==1.4.0
+future==0.10.1
 gunicorn==19.3.0
 mercadopago==0.3.3
+openpay==0.2
 psycopg2==2.4.6
 pytz==2015.4
 requests==2.7.0
