--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+conekta==1.2
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.1
@@ -9,11 +10,14 @@ django-widget-tweaks==1.3
 djrill==1.4.0
 future==0.10.1
 gunicorn==19.3.0
+httplib2==0.9.1
 mercadopago==0.3.3
+nose==1.3.7
 openpay==0.2
 psycopg2==2.4.6
 pytz==2015.4
 requests==2.7.0
+simplejson==3.7.3
 SQLAlchemy==1.0.4
 static3==0.6.0
 whitenoise==1.0.6
